--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ main {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('./images/bg-intro-desktop.png') no-repeat;
+    background: url('/images/bg-intro-desktop.png') no-repeat;
     background-size: cover;
     background-color: hsl(172, 89%, 30%);
     color: #fff;
