--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,9 @@ input:focus,
 } */
 
 @media (max-width: 768px) {
+    form{
+        padding: 20px;
+    }
     main{
         padding: 40px 5px;
         flex-direction: column;
